--- a/form/index.html
+++ b/form/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url('background.jpg');">
 
     <section class="get_in_touch">
         <h1 class="title">Get in touch</h1>
