--- a/form/index.html
+++ b/form/index.html
@@ -46,7 +46,7 @@
                     <input id="message" class="input-text" type="text" name="">
                     <label for="message" class="label">message </label>
                 </div>
-                <div class="form-field col-lg-12 ">
+                <div class="form-field subbmit-btn col-lg-12 ">
                     <input class="submit-btn" type="submit" value="submit" name="">
                 </div>
             </div>
