--- a/Report Subbmission/demo.htm
+++ b/Report Subbmission/demo.htm
@@ -28,7 +28,7 @@
     
                 <form action="demo.php" method="post" enctype="multipart/form-data">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Enter Name">
+                        <input type="text" class="form-control" placeholder="Enter your Name">
                     </div>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter your Mentor's name">
@@ -36,10 +36,6 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter your tech domain">
                     </div>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Enter Name">
-                    </div>
-                    <div class="input-group mb-3">
     
                         <p>Select a File to upload</p>
                         <input type="file" name="fileupload" id="fileUpload">
